# internal/features/auth/dto/response.go
@@ -1,15 +1,36 @@
 package dto
 
 type LoginResponse struct {
-	Token string `json:"token"`
+	AccessToken  string       `json:"access_token"`
+	RefreshToken string       `json:"refresh_token"`
+	ExpiresIn    int          `json:"expires_in"`
+	TokenType    string       `json:"token_type"`
+	User         UserResponse `json:"user"`
+}
+
+type OTPResponse struct {
+	AccessToken  string       `json:"access_token"`
+	RefreshToken string       `json:"refresh_token"`
+	ExpiresIn    int          `json:"expires_in"`
+	TokenType    string       `json:"token_type"`
+	User         UserResponse `json:"user"`
+}
+
+type RefreshResponse struct {
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token"`
+	ExpiresIn    int    `json:"expires_in"`
 }
 
 type UserResponse struct {
-	ID        string  `json:"id"`
-	Username  string  `json:"username"`
-	Email     string  `json:"email"`
-	Avatar    *string `json:"avatar,omitempty"`
-	Role      string  `json:"role"`
-	CreatedAt string  `json:"created_at"`
-	UpdatedAt string  `json:"updated_at"`
+	ID            string  `json:"id"`
+	Username      string  `json:"username"`
+	Email         string  `json:"email"`
+	FirstName     string  `json:"firstName"`
+	LastName      string  `json:"lastName"`
+	EmailVerified bool    `json:"emailVerified"`
+	Avatar        *string `json:"avatar,omitempty"`
+	Role          string  `json:"role"`
+	CreatedAt     string  `json:"created_at"`
+	UpdatedAt     string  `json:"updated_at"`
 }
